--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,14 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-
     //login
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:design:27.1.0'
     // end login
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 
 }
